--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -404,6 +404,9 @@ span.radio.inline {
 
 .lesson_content {
   background-color: white;
+  padding: 60px 0px;
+  margin: 0px;
+
   h1 {
     border-left: 6px solid #ec6952;
     padding-left: 10px;
