--- a/app/views/lessons/_sidebar.html.erb
+++ b/app/views/lessons/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills nav-stacked left-menu" id="sidebar">
+<ul class="nav nav-pills nav-stacked left-menu sidebar sidebar-left">
 
   <li><%= link_to '<i class="fa fa-home" aria-hidden="true"></i> <span class="nav-text">All Courses</span>'.html_safe, courses_path %></li>
   <li class="course-title"><%= link_to @current_course_title, "/" + @current_course_link %></li>
