--- a/app/views/layouts/_audio.html.erb
+++ b/app/views/layouts/_audio.html.erb
@@ -2,4 +2,5 @@
   var completed_sound = new Audio('/sounds/completed.wav');
   var success_sound = new Audio('/sounds/success.wav');
   var ok_sound = new Audio('/sounds/OK.wav');
+  var notification_sound = new Audio('/sounds/notification.wav');
 </script>
