--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -41,7 +41,7 @@
 
                     <li class="nav-item dropdown" data-behavior="notifications">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"  data-delay="0" data-close-others="true" data-behavior="notifications-link"> <i class="fa fa-bell"></i> <span data-behavior="unread-count"></span></a>
-                      <ul class="dropdown-menu notification-menu" data-behavior="notification-items">
+                      <ul class="dropdown-menu notification-menu" id="notifications" data-behavior="notification-items">
                         <li><span id="notification-header"><strong>Notifications</strong></span></li>
                       </ul>
                     </li>
