--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -272,18 +272,19 @@ select {
   background: none;
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 22px;
 }
 .header .main-nav .navbar-toggle:focus {
   outline: none;
 }
 .header .main-nav .navbar-toggle .icon-bar {
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: #253340;
   height: 3px;
 }
 .header .main-nav .navbar-toggle:hover .icon-bar {
-  background-color: #fff;
+  background-color: #ec6952;
 }
+
 .header .main-nav .nav .nav-item {
   font-weight: normal;
   text-transform: uppercase;
@@ -3121,7 +3122,7 @@ select {
     box-shadow: none;
     width: 100%;
     left: 0;
-    top: 90px;
+    top: 80px;
     position: absolute;
     background: #253340;
     z-index: 45;
@@ -3488,7 +3489,7 @@ select {
 /*    padding-top: 25px;*/
   }
   .header.scrolled .main-nav .nav .nav-item a {
-    color: #666666;
+    color: white;
     -webkit-opacity: 1;
     -moz-opacity: 1;
     opacity: 1;
