--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -22,7 +22,9 @@ $sidebar-border: #323232;
   display: inline-block;
   border-left: 2px solid #161616;
   min-height: 100vh;
+
   h3 {
+    color: white;
     margin-top: 0px;
     padding: 10px 0px 20px;
     font-family: 'Lato', sans-serif;
