--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -18,7 +18,7 @@
     <%= render 'sidebar' %>
   </div>    
 
-  <div class="col-lg-11 col-md-12">
+  <div class="col-xs-11">
 
     <section class="lesson_content">
 
@@ -44,12 +44,12 @@
 
   </div>
 
-  <div class="col-lg-1 visible-lg">
-      <%= react_component 'SidebarRight', { authenticity_token: form_authenticity_token, 
-                                            lesson_id: params[:id], 
-                                            course_name: controller_name.classify,
-                                            lesson_url: request.original_url } %>
-  </div>
+  <%= react_component 'SidebarRight', { display_sm: false,
+                                        authenticity_token: form_authenticity_token, 
+                                        lesson_id: params[:id], 
+                                        course_name: controller_name.classify,
+                                        lesson_url: request.original_url } %>
+
 
 </div>
 
