--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -21,6 +21,8 @@ $sidebar-border: #323232;
   display: inline-block;
   border-left: 2px solid #161616;
   min-height: 100vh;
+  color: white;
+  font-family: 'Lato', sans-serif;
 
   h3 {
     color: white;
