--- a/app/views/quiz_completions/update_lesson_nav.js.erb
+++ b/app/views/quiz_completions/update_lesson_nav.js.erb
@@ -1,1 +1,1 @@
-$('.lesson_nav_box').html("<%= escape_javascript render partial: 'lesson_nav_section', locals: {quiz_completion: true} %>");
+$('.lesson_nav_box').html("<%= escape_javascript render partial: 'lesson_nav_section', locals: {quiz_completed: true} %>");
