landing page edit1

--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -1,7 +1,7 @@
 <%= display_meta_tags site: 'TECHRISE',
                       reverse: true,
                       title: 'Ruby on Rails Coding Bootcamp in Nepal',
-                      description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.',
+                      description: 'Begin your coding journey with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community at TECHRISE.',
                       keywords: 'Coding Bootcamp, Ruby on Rails, Ruby, Nepal, IT, Training',
                       og: {
                         type: "website",
