--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,7 +13,7 @@
     <div class="container text-center">       
         <%= render "shared/flash_messages" %>
 
-        <h1 class="title">Become a Web Developer in 2 Months<br>Experience The New Way of Learning</h2>
+        <h1 class="title">1 on 1 Mentor Sessions<br>The Fast Track to Learning Web Development</h2>
         <p class="intro">
           An innovative Learning Platform combining 1 on 1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
         </p>
