--- a/app/views/quiz_completions/create.js.erb
+++ b/app/views/quiz_completions/create.js.erb
@@ -1,1 +1,1 @@
-$('#lesson_nav_container').html("<%= escape_javascript render partial: 'lessons/lesson_nav_section.html.erb', locals: {quiz_completed: true} %>");
+$('#lesson_nav_container').html("<%= escape_javascript render partial: 'lessons/lesson_nav_section.html.erb' %>");
