--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -68,7 +68,8 @@
                                         authenticity_token: form_authenticity_token, 
                                         lesson_id: params[:id], 
                                         course_name: controller_name.classify,
-                                        lesson_url: request.original_url } %>
+                                        lesson_url: request.original_url,
+                                        quizCompleted: @quiz_completed } %>
 
 
 </div>
