--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,7 +17,11 @@
         <p class="intro">
           An innovative Learning Platform combining 1 on 1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
         </p>
-        <p><a class="btn btn-cta btn-cta-primary" href="/apply">Start Your Web Development Career</a></p>
+        <p>
+          <a class="btn btn-cta btn-cta-primary" href="/apply">
+            Enroll Now
+          </a>
+        </p>
     </div><!--//container-->
 </section><!--//promo-->
 
