--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -1,8 +1,4 @@
 .quiz-options {
-  // transition: border 700ms ease-in;
-  // -webkit-transition: border 700ms ease;
-  // -moz-transition: border 700ms ease;
-  // -o-transition: border 700ms ease;
   -webkit-transition: 0.5s ease;
   -moz-transition: 0.5s ease;
   -ms-transition: 0.5s ease;
@@ -20,6 +16,7 @@
   margin-bottom: 20px;
   min-height: 300px;
   position: relative;
+  word-wrap: break-word;
 }
 
 .score-enter {
