--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -15,11 +15,11 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>4</h3>
-                  <h5>Mentor Sessions</h5>
+                  <h5>Weeks Part-time</h5>
                 </div><!-- col-xs-12 col-md-6 -->
 
                 <div class="col-xs-12 col-md-6">
-                  <h3>3,000 NPR</h3> 
+                  <h3>2,980 NPR</h3> 
                   <h5>Total Cost *</h5>               
                 </div><!-- col-xs-12 col-md-6 -->
               </div><!-- row -->
@@ -29,10 +29,10 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <ul>
-                    <li>1 Month of Training (Extendible)</li>
+                    <li>Over 100 hours of course material</li>
+                    <li>Weekly Mentor Sessions</li>
                     <li>Learn Completely Online</li>
-                    <li>Learn at your own pace</li>                  
-                    <li>All Courses Included</li>                                      
+                    <li>Learn at your own pace</li>
                   </ul>
                 </div><!-- col-xs-12 col-md-6 -->
 
@@ -40,7 +40,8 @@
                   <ul>
                     <li>Online Mentor Sessions</li>
                     <li>Access to Online Forum and Community</li>
-                    <li>Build Real-World Web Applications</li>                  
+                    <li>Build Real-World Web Applications</li>    
+                    <li>All Courses Included</li>                  
                   </ul>
                 </div><!-- col-xs-12 col-md-6 -->
 
@@ -64,8 +65,8 @@
             <div class="program-box-highlights">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>16</h3>
-                  <h5>Mentor Sessions</h5>
+                  <h3>8</h3>
+                  <h5>Weeks Intensive</h5>
                 </div><!-- col-xs-12 col-md-6 -->
 
                 <div class="col-xs-12 col-md-6">
@@ -79,10 +80,10 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <ul>
-                    <li>8 Weeks of Intensive Training</li>
+                    <li>Over 180 hours of course material</li>
+                    <li>16 Mentor Sessions</li>
                     <li>Access to Online Forum and Community</li>
-                    <li>Lifetime Access to Curriculum</li>
-                    <li>Events, workshops and review sessions</li>                  
+                    <li>Lifetime Access to Curriculum</li>                    
                   </ul>
                 </div><!-- col-xs-12 col-md-6 -->
 
