--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
-    <h1 class="logo" style="padding-top: 13px; padding-left: 15px;">
+    <a href="/"><%= image_tag 'logo.png', class: 'logo' %></a>
+    <!-- <h1 class="logo" style="padding-top: 13px; padding-left: 15px;">
         <a href="/"><span class="text" style="font-size: 40px;color: #EC6952;font-family:'Titillium Web', sans-serif;">TECHRISE</span></a>
-    </h1><!--//logo-->
+    </h1><!--//logo--> -->
     <nav class="main-nav navbar-right" role="navigation">
         <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
