--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -21,7 +21,7 @@
           Learn at your own pace remotely through our complete online course.
         </p>  
 
-        <span class="highlight-checkbox">1 Personal Mentor Session per week via Skype</span>
+        <span class="highlight-checkbox">Weekly Personal Mentor Session via Skype</span>
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
         <span class="highlight-checkbox">Ask questions and interact with community members</span>
 
