--- a/app/views/static_pages/curriculum.html.erb
+++ b/app/views/static_pages/curriculum.html.erb
@@ -20,7 +20,7 @@
 
                 <div class="curriculum-cta text-center">
                     <h4 class="title" style="color:#333;">Want to experience the TECHRISE Curriculum?</h4>
-                    <p><%= link_to 'Sign Up to Gain Instant Access', apply_path, class: 'btn btn-cta btn-cta-primary' %></p>
+                    <p><%= link_to 'Apply Now', apply_path, class: 'btn btn-cta btn-cta-primary' %></p>
                 </div>
 
                 
