chEdit flaticon size and position

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -78,7 +78,7 @@
                   </div><!--//quote-->                        
               </div><!--//content-->
               <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-pull-4 col-sm-pull-0 col-xs-pull-0">
-                  <%= image_tag 'background/mentor_image.jpg', class: 'img-responsive' %>                        
+                  <%= image_tag 'background/mentor_image.jpg', class: 'img-responsive flaticon' %>                        
               </figure>
           </div><!--//item-->
           
@@ -104,7 +104,7 @@
                   </div><!--//quote-->
               </div><!--//content-->
               <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-pull-4 col-sm-pull-0 col-xs-pull-0">
-                  <%= image_tag 'landing_page/figure-4.png', class: 'img-responsive' %>                        
+                  <%= image_tag 'landing_page/figure-4.png', class: 'img-responsive flaticon' %>                        
               </figure>
           </div><!--//item-->
           
