--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -27,8 +27,6 @@
 
 <div class="sections-wrapper">   
 
-  <%= render 'comparison_chart' %>
-
   <!-- ******Why Section****** -->
   <section id="why" class="section why">
       <div class="container">
@@ -171,9 +169,10 @@
           </div>
 
       </div>
+    </section>
   </section>
 
-  
+  <%= render 'comparison_chart' %>
 
   <!-- ******Testimonials Section****** -->
   <section class="section testimonials">
