--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -164,3 +164,11 @@ $sidebar-border: #323232;
     border-bottom: none;
   }
 }
+
+.sort-menu {
+  color: #333;
+  li {
+    padding: 10px;
+    color: #333;
+  }
+}
