--- a/app/assets/stylesheets/quizzes.scss
+++ b/app/assets/stylesheets/quizzes.scss
@@ -9,14 +9,20 @@
 }
 
 .quiz-container {
-  background: white;
   color: #333;
   border-radius: 4px;
+  min-height: 350px;
+  word-wrap: break-word;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  left: 20px;
+}
+
+.quiz-container-inner {
+  background: white;
   padding: 20px;
   margin-bottom: 20px;
-  min-height: 300px;
-  position: relative;
-  word-wrap: break-word;
 }
 
 .score-enter {
