--- a/app/views/ideator_lessons/lessons/lesson_9.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_9.html.erb
@@ -211,7 +211,7 @@ end
     In short, <code>schema.rb</code> <strong>specifies what database tables and columns are included in the application.</strong>
   </p>
 
-    <%= image_tag 'ideator/migrations.png', class: 'img-responsive screenshot' %>
+    <%= image_tag 'ideator/migrations.jpg', class: 'img-responsive screenshot' %>
 
 
   <%= create_flashcard %>
