add heroku comment

--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -219,6 +219,16 @@ production:
 </code></pre>
 
 <p>
+  Next, let's first commit (save) the changes we have made to GitHub. In the terminal, run the following commands:
+</p>  
+
+<pre><code class="bash">
+git add .
+git commit -am "change database to postgresql"
+git push origin master
+</code></pre>
+
+<p>
   Next, in your terminal window, run the following command (make sure there is a dollar sign):
 </p>
 
