add submission instructions

--- a/app/views/microposts_lessons/lessons/lesson_1.html.erb
+++ b/app/views/microposts_lessons/lessons/lesson_1.html.erb
@@ -118,7 +118,7 @@
 </ol>
 
 <p>
-  Good luck with this challenge <%= current_user.first_name %>!
+  Good luck with this challenge <%= current_user.first_name %>! <strong>Submit your a link to your Github repository and a link to the application deployed to Heroku down below.</strong>
 </p>
 
 <div class="well">
