add directions to ruby core lesson 1

--- a/app/views/ruby_core_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ruby_core_lessons/lessons/lesson_1.html.erb
@@ -40,6 +40,14 @@
 <h3>Assignments</h3>
 <h5>DURATION: 1 week</h5>
 
+<p>
+  <strong>First create a Github Repository called Codewars Challenges.</strong> Inside of this repository, create a new ruby file with the title of the problem and enter and save your code in this file.
+</p>
+
+<p>
+  Make sure that all of the tests pass - we will be checking for code quality and not necessarily if the problem works. We will assume that all of the problms you submit work. Submit your Github repository and we will give you a code review.
+</p>
+
 <h4>Problem Set 1</h4>
 <ol>
   <li><a href="http://www.codewars.com/kata/53e30ec0116393fe1a00060b/train/ruby" target="_blank">Remove Duplicates</a></li>
@@ -79,3 +87,5 @@
   <li><a href="http://www.codewars.com/kata/535474308bb336c9980006f2/train/ruby" target="_blank">Greet Me</a></li>
   <li><a href="http://www.codewars.com/kata/513f887e484edf3eb3000001/train/ruby" target="_blank">Ruby Person Class Bug</a></li>
 </ol>
+
+<% @submission_form = true %>
