--- a/app/views/shared/_story.html.erb
+++ b/app/views/shared/_story.html.erb
@@ -1,6 +1,6 @@
 <div class="story">
   <div class="story-title">
-    <h2><%= story_title %></h2>
+    <h2 style="font-size: 18px;"><%= story_title %></h2>
   </div>
 
   <div class="story-wrapper">
