--- a/app/views/mvc_lessons/lessons/lesson_7.html.erb
+++ b/app/views/mvc_lessons/lessons/lesson_7.html.erb
@@ -67,31 +67,42 @@
   Here are the user stories you need to build:
 </p>
 
+<div class="row">
+  <div class="col-xs-12 col-md-6">
+    <%= render layout: 'shared/story', locals: {story_title: "As a user, I want to have a page where I can fill out a form to post a record of my finances"} do %>
+      <ul>
+        <li>Each record should have a <code>title</code>, <code>date</code>, and an <code>amount</code>.</li>
+      </ul> 
+    <% end %>
+  </div>
 
-<%= render layout: 'shared/story', locals: {story_title: "As a user, I want to have a page where I can fill out a form to post a record of my finances"} do %>
-  <ul>
-    <li>Each record should have a <code>title</code>, <code>date</code>, and an <code>amount</code>.</li>
-  </ul> 
-<% end %>
+  <div class="col-xs-12 col-md-6">
+    <%= render layout: 'shared/story', locals: {story_title: "As a user, I want to be able to edit and update my records"} do %>
+      <ul>
+        <li>After a record is updated, let's display a flash message saying "Your record has been updated!"</li>
+      </ul> 
+    <% end %>
+  </div>
+</div>
 
-<%= render layout: 'shared/story', locals: {story_title: "As a user, I want to be able to edit and update my records"} do %>
-  <ul>
-    <li>After a record is updated, let's display a flash message saying "Your record has been updated!"</li>
-  </ul> 
-<% end %>
+<div class="row">
+  <div class="col-xs-12 col-md-6">
+    <%= render layout: 'shared/story', locals: {story_title: "As a user, I want to be able to delete records"} do %>
+      <ul>
+        <li>After a record is deleted, let's display a flash message saying "A record has been deleted!"</li>
+      </ul> 
+    <% end %>
+  </div>
 
-<%= render layout: 'shared/story', locals: {story_title: "As a user, I want to be able to delete records"} do %>
-  <ul>
-    <li>After a record is deleted, let's display a flash message saying "A record has been deleted!"</li>
-  </ul> 
-<% end %>
-
-<%= render layout: 'shared/story', locals: {story_title: "As a user, I want to have a page where I can view all records as well as balance, debt, and total sum of the amounts"} do %>
-  <ul> 
-    <li>You can use a <code>where</code> clause to find the balance and debt</li>
-    <li>Google for how you can get the total sum of an attribute in a collection of ActiveRecord objects</li>
-  </ul> 
-<% end %>
+  <div class="col-xs-12 col-md-6">
+    <%= render layout: 'shared/story', locals: {story_title: "As a user, I want to have a page where I can view all records as well as balance, debt, and total sum of the amounts"} do %>
+      <ul> 
+        <li>You can use a <code>where</code> clause to find the balance and debt</li>
+        <li>Google for how you can get the total sum of an attribute in a collection of ActiveRecord objects</li>
+      </ul> 
+    <% end %>
+  </div>
+</div>
 
 <div class="well">
   <h3>Summary</h3>
