made instruction clear

--- a/app/views/ruby_lessons/lessons/lesson_20.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_20.html.erb
@@ -71,7 +71,7 @@
   <%= image_tag 'ruby_lessons/temperature/coding_challenge_workspace.png', class: 'img-responsive screenshot' %>
 
   <p>
-    Select Ruby as the template: 
+    Select Ruby as the template:
   </p>
 
   <%= image_tag 'ruby_lessons/temperature/coding_challenge_workspace_2.png', class: 'img-responsive screenshot' %>
@@ -123,7 +123,7 @@ NameError:
   </code>
 </pre>
 
-  <p>The first error is saying that the method is not defined. Let's define that method in our <strong>hello.rb</strong> file.</p>
+  <p>The first error is saying that the method is not defined. Let's define that method in our <strong>hello.rb</strong> file inside the <strong>lib</strong> directory.</p>
 
 <pre><code class="ruby">
 def hello
