--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -7,7 +7,7 @@
                         type: "website",
                         url: request.original_url,
                         title: "Coding Bootcamp in Nepal | TECHRISE",
-                        image: "http://www.techrise.me#{asset_path 'background/bg-header-1.1.jpg'}",
+                        image: asset_url('background/bg-header-1.1.jpg'),
                         description: "Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way."
                       } %>
 
