add bundle instruction

--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -223,6 +223,7 @@ production:
 </p>  
 
 <pre><code class="bash">
+bundle install
 git add .
 git commit -am "change database to postgresql"
 git push origin master
