fix setter/getter method lesson

--- a/app/views/ruby_lessons/lessons/lesson_16.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_16.html.erb
@@ -216,12 +216,12 @@ puts "Age: " + cat.age
 </p>
 
 <p>
-	<strong><code>attr_reader</code> replaces the getter methods</strong>:
+	<strong><code>attr_writer</code> replaces the setter methods</strong>:
 </p>
 
 <pre><code class="ruby">
 class Cat
-	attr_reader :name, :age
+	attr_writer :name, :age
 
 	def initialize(name, age)
 		@name = name
@@ -249,13 +249,13 @@ end
 </code></pre>
 
 <p>
-	<strong><code>attr_writer</code> replaces the setter methods:</strong>
+	<strong><code>attr_reader</code> replaces the getter methods:</strong>
 </p>
 
 <pre><code class="ruby">
 class Cat
-	attr_reader :name, :age
 	attr_writer :name, :age
+	attr_reader :name, :age
 
 	def initialize(name, age)
 		@name = name
