--- a/app/views/admin/quiz_problems/index.html.erb
+++ b/app/views/admin/quiz_problems/index.html.erb
@@ -1,7 +1,1 @@
-<% @quiz_problems.each do |course_name, problems| %>
-  <h3><%= course_name %></h3>
-
-  <% problems.each do |problem| %>
-    <%= problem.question %>
-  <% end %>
-<% end %>
+<%= react_component 'AdminQuizProblems' %>
