add option toggle

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -3,4 +3,10 @@
   background: white;
   padding: 10px 20px;
   margin-bottom: 10px;
+  position: relative;
+  small {
+    top: 10px;
+    position: absolute;
+    right: 20px;
+  }
 }
