--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,9 +13,9 @@
     <div class="container text-center">       
         <%= render "shared/flash_messages" %>
 
-        <h1 class="title">1 on 1 Mentor Sessions<br>The Fast Track to Learning Web Development</h2>
+        <h1 class="title">Coding Bootcamp in Nepal<br>The Fast Track to Learning Web Development</h2>
         <p class="intro">
-          An innovative Learning Platform combining 1 on 1 mentor training, project-based learning, and a supportive online community that will accelerate your path to becoming a web developer.
+          Learn Ruby on Rails, one of the most popular web development frameworks in the world, through our interactive platform combining 1 on 1 mentor sessions, project based learning, and a supportive online community.
         </p>
         <p>
           <a class="btn btn-cta btn-cta-primary" href="/apply">
@@ -192,15 +192,7 @@
                       I am a BSC.CS.IT student. <strong>I love programming, and always thought of becoming a programmer.</strong> But there was a problem whenever I try to learn something new by myself, it was like I was missing something. <strong>When I got stuck there was no one to help me.</strong> I could search it on internet but the problem was I could not get all what I want. After I joined TECHRISE <strong>I am learning about new things everyday.</strong> It's a new experience integrating new technologies. I am really happy that I am with safe hands. <strong>Thank you TECHRISE for fulfilling my dream to be a good programmer.</strong>
                     </p>
                     </blockquote>
-
-                    <h3 class="read-more">
-                      Check out web apps developed by Rabin
-                    </h3>
-                    <ul style="list-style-type: none;">
-                      <li><a href="https://immense-meadow-85860.herokuapp.com/" target="_blank">Ideator</a> - created in just his <strong>2nd week</strong> at TECHRISE.</li>     
-                      <li><a href="https://instapostnepal.herokuapp.com/users/sign_in" target="_blank">Instapost</a> - developed on <strong>Week 4</strong> at TECHRISE.</li>                 
-                    </ul>
-                    
+              
                 </div><!--//content-->  
               </div><!-- testimonial-card -->
             </div><!-- col-xs-12 col-sm-6 -->
@@ -259,22 +251,7 @@
               </div><!-- testimonial-card -->
             </div><!-- col-xs-12 col-sm-6 -->
 
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'landing_page/sandeep.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Sandeep Poudel</span><br />Current Student at TECHRISE</p>
 
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      I was not so good at coding and was unknown what to do so I can move with the flow of current world but after joining TECHRISE, I am good at coding and able to choose the right field to set my career. Thank you TECHRISE for providing guidance to build up my skill and confidence through lessons, weekly mentor section and assignments.
-                    </p>
-                    </blockquote>
-                    
-                </div><!--//content-->       
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->
 
             <div class="col-xs-12 col-sm-6">
               <div class="testimonial-card">
@@ -314,23 +291,7 @@
               </div><!-- testimonial-card -->
             </div><!-- col-xs-12 col-sm-6 -->
 
-            <div class="col-xs-12 col-sm-6">
-              <div class="testimonial-card">
-                <figure class="profile"><%= image_tag 'lakshman.jpg' %></figure>
-                <div class="content">
-                    <p class="source"><span class="title">Lakshman Basnet</span><br />Hired at TECHRISE after graduation</p>
-
-                    <blockquote>
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                      <strong>I was lost and was trying many courses on the internet.</strong> After joining TECHRISE, I got courses of my preference and suitable to the current market. <strong>Weekly mentor sessions, well presented, tested and clearly explained lessons and assignments' reviews were the best part learning here.</strong> Asking a lot of questions to my mentor, and discussing with other members in Slack enhanced fast understanding. Thank you TECHRISE for helping me build skills to make great apps.
-                    </p>
-                    </blockquote>
-                    
-                </div><!--//content-->            
-              </div><!-- testimonial-card -->
-            </div><!-- col-xs-12 col-sm-6 -->            
-
+            
 
 
           </div><!-- row -->          
